Changes for 1.0beta14:

 - added W32 install floppy. Thanks to  Fabricio Ferrari. (Alexei)
 - new action type: "ON or OFF" (Alexei)
 - added support of macro {STATUS} (Alexei)
 - pinger to work for all hosts (ip and hostname-based) (Alexei)
 - fixed memory[cached] to work for both linux 2.4 and 2.6 (Alexei)
 - do not link crypt and crypto to the agent (Alexei)
 - fixed report1.php to work under FreeBSD (Alexei)
 - fixed displaying of string value in the Latest Values (Alexei)
 - fixed simple check when port specified. Order of IP and PORT is
 arbitrary now (Alexei)
 - fixed pinger to correc calculate number of seconds (Alexei)
 - fixed selection of "Dark Yellow" for graphs and map links (Alexei)
 - fixed removal of trigger dependency (Alexei)
 - added substitution of macros for all actions (Alexei)
 - added escaping of 'special' characters before SQL insert statements
 (Alexei)
 - fixed removal of sysmaps hosts and links when deleting item (Alexei)
 - fixed Use IP address in host definition form (Alexei)
 - fixed audio in Status of Triggers (Alexei)
 - fixed change of action subject if it contains special characters
 (Alexei)
 - fixed creation of actions from templates (Alexei)
 - Battery.png has been renamed to UPS.png (Alexei)
 - fixed removal of an item under PostgreSQL (Alexei)
 - fixed patch for PostgreSQL (Alexei)

Changes for 1.0beta13:

 - fixed sending of alerts when PostgreSQL is used (Alexei)
 - sprintf() was replaced with snprintf() (Alexei)
 - fix for prefixes K,M and G (Alexei)
 - strncpy() was replaced with secure strscpy() where possible (Alexei)
 - fixed support for situation when one of graph's metrics has no values
 (Alexei)
 - added '2>/dev/null' to fping to get rid of message on the console (Alexei)
 - new icons and icon types for sysmaps (Alexei)
 - added columns color_on,color_off,drawtype_on,drawtype_off to table
 sysmaps_links (Alexei)
 - do not show group having no hosts in Latest Values (Alexei) 